--- a/index.html
+++ b/index.html
@@ -7,6 +7,57 @@
 	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-	
+	<header class="header"> 
+		<div class="header-top">
+			<div class="container">
+				<div class="logo">
+					<a class="logo__link" href="#">
+						<img class="logo__img" src="images/logo.png">
+					</a>
+				</div>
+				<ul class="menu"> 
+					<li class="menu__item">
+						<a href="#" class="menu__link">
+							<span class="menu__text">Home</span>
+						</a>
+					</li>
+					<li class="menu__item">
+						<a href="#" class="menu__link">
+							<span class="menu__text">Service</span>
+						</a>
+					</li>
+					<li class="menu__item">
+						<a href="#" class="menu__link">
+							<span class="menu__text">Features</span>
+						</a>
+					</li>
+					<li class="menu__item">
+						<a href="#" class="menu__link">
+							<span class="menu__text">Portfolio</span>
+						</a>
+					</li>
+					<li class="menu__item">
+						<a href="#" class="menu__link">
+							<span class="menu__text">Contact</span>
+						</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+		<div class="header-center container">
+			<div class="main-content">
+				<span class="main-content__text">
+					<span class="main-content__text_wrap">
+						"I'm looking for the unexpected.
+					</span>
+				</span>
+				<span class="main-content__text">
+					<span class="main-content__text_wrap">
+						I'm looking for things I've never seen before."
+					</span>
+				</span>
+			</div>
+		</div>	
+	</header>
 </body>
 </html>
