services block finished

--- a/index.html
+++ b/index.html
@@ -59,5 +59,43 @@
 			</div>
 		</div>	
 	</header>
+	<div class="services">
+		<div class="container">
+			<div class="block-name services__block-name">
+				<span class="block-name__text">Services</span>
+				<hr class="block-name__line services__line_styles">
+			</div>
+			<div class="services-list">
+				<div class="services-item">
+					<img class="services-item__img" src="images/coffee.png">
+					<span class="services-item__title">Coffee</span>
+					<span class="services-item__text">
+						Apple pie icing sweet. Brownie jelly-o applicake applicake sweet roll liquorice bear claw. Jujubes carrot cake cotton candy sweet tart brownie. Tiramisu applicake jujubes.
+					</span>
+				</div>
+				<div class="services-item">
+					<img class="services-item__img" src="images/instant.png">
+					<span class="services-item__title">Instant</span>
+					<span class="services-item__text">
+						Apple pie icing sweet. Brownie jelly-o applicake applicake sweet roll liquorice bear claw. Jujubes carrot cake cotton candy sweet tart brownie. Tiramisu applicake jujubes.
+					</span>
+				</div>
+				<div class="services-item">
+					<img class="services-item__img" src="images/serious.png">
+					<span class="services-item__title">Serious</span>
+					<span class="services-item__text">
+						Apple pie icing sweet. Brownie jelly-o applicake applicake sweet roll liquorice bear claw. Jujubes carrot cake cotton candy sweet tart brownie. Tiramisu applicake jujubes.
+					</span>
+				</div>
+				<div class="services-item services-item_last">
+					<img class="services-item__img" src="images/frame.png">
+					<span class="services-item__title">Frame</span>
+					<span class="services-item__text">
+						Apple pie icing sweet. Brownie jelly-o applicake applicake sweet roll liquorice bear claw. Jujubes carrot cake cotton candy sweet tart brownie. Tiramisu applicake jujubes.
+					</span>
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
