portfolio block finished

--- a/index.html
+++ b/index.html
@@ -97,5 +97,48 @@
 			</div>
 		</div>
 	</div>
+	<div class="portfolio container">
+		<div class="block-name portfolio__block-name">
+			<span class="block-name__text">Portfolio</span>
+			<hr class="block-name__line portfolio__line_styles">
+		</div>
+		<ul class="portfolio-nav">
+			<li class="portfolio-nav__item">
+				<a href="#" class="portfolio-nav__link">
+					<span class="portfolio-nav__text">All</span>
+				</a>
+			</li>
+			<li class="portfolio-nav__item">
+				<a href="#" class="portfolio-nav__link">
+					<span class="portfolio-nav__text">Panorams</span>
+				</a>
+			</li>
+			<li class="portfolio-nav__item">
+				<a href="#" class="portfolio-nav__link">
+					<span class="portfolio-nav__text">Portraits</span>
+				</a>
+			</li>
+			<li class="portfolio-nav__item">
+				<a href="#" class="portfolio-nav__link">
+					<span class="portfolio-nav__text">Macro</span>
+				</a>
+			</li>
+			<li class="portfolio-nav__item">
+				<a href="#" class="portfolio-nav__link">
+					<span class="portfolio-nav__text">Journal</span>
+				</a>
+			</li>
+		</ul>
+		<div class="portfolio-photo">
+			<img class="portfolio-photo__item" src="images/photo1.png">
+			<img class="portfolio-photo__item" src="images/photo2.png">
+			<img class="portfolio-photo__item" src="images/photo3.png">
+			<img class="portfolio-photo__item photo-item_last" src="images/photo4.png">
+			<img class="portfolio-photo__item" src="images/photo4.png">
+			<img class="portfolio-photo__item" src="images/photo1.png">
+			<img class="portfolio-photo__item" src="images/photo4.png">
+			<img class="portfolio-photo__item photo-item_last" src="images/photo1.png">
+		</div>
+	</div>
 </body>
 </html>
