--- a/index.html
+++ b/index.html
@@ -140,5 +140,29 @@
 			<img class="portfolio-photo__item photo-item_last" src="images/photo1.png">
 		</div>
 	</div>
+	<div class="video-block">
+		<div class="container">
+			<div class="left-column">
+				<div class="block-name video__block-name">
+					<span class="block-name__text">Just Default Section</span>
+					<hr class="block-name__line video__line_styles">
+				</div>
+				<div class="video-text">
+					<p class="video-text__paragraph">
+						Bear claw marzipan bear claw applicake I love muffin. Lemon drops gummi bears pastry gummi bears sesame snaps I love unerdwear.com. Soufflé cotton candy dessert candy ice cream wafer gummies cheesecake brownie.
+					</p>
+					<p class="video-text__paragraph">
+						Muffin chupa chups jelly beans sweet pie applicake. Croissant chocolate cake I love pudding. Ice cream I love powder pudding apple pie marshmallow. Cupcake marzipan oat cake bonbon I love candy canes toffee.
+					</p>
+				</div>
+				<div class="button">
+					<a class="button__text" href="#">Visit me</a>
+				</div>
+			</div>
+			<div class="right-column">
+				<iframe src="https://player.vimeo.com/video/166930720" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
