--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Blueasy</title>
+	<link rel="stylesheet" href="css/font-awesome.css">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/styles.css">
 </head>
@@ -161,6 +162,23 @@
 			</div>
 			<div class="right-column">
 				<iframe src="https://player.vimeo.com/video/166930720" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+			</div>
+		</div>
+	</div>
+	<div class="twitter">
+		<div class="container">
+			<div class="block-name twitter__block-name">
+				<span class="block-name__text">Twitter</span>
+				<hr class="block-name__line twitter__line_styles">
+			</div>
+			<div class="twitter__icon-block">
+				<a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+			</div>
+			<div class="twitter-content">
+				<p class="twitter-content__text">
+					Unerdwear cookie liquorice. Cake donut cupcake lollipop soufflé candy. Chocolate oat cake 
+					<span class="twitter-content__text_bold">@cheesecake</span> tootsie roll.
+				</p>
 			</div>
 		</div>
 	</div>
