about john block finished

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 	</div>
 	<div class="video-block">
 		<div class="container">
-			<div class="left-column">
+			<div class="video__left-column">
 				<div class="block-name video__block-name">
 					<span class="block-name__text">Just Default Section</span>
 					<hr class="block-name__line video__line_styles">
@@ -160,7 +160,7 @@
 					<a class="button__text" href="#">Visit me</a>
 				</div>
 			</div>
-			<div class="right-column">
+			<div class="video__right-column">
 				<iframe src="https://player.vimeo.com/video/166930720" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 			</div>
 		</div>
@@ -172,13 +172,42 @@
 				<hr class="block-name__line twitter__line_styles">
 			</div>
 			<div class="twitter__icon-block">
-				<a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+				<a href="#"><i class="fa fa-twitter twitter-icon" aria-hidden="true"></i></a>
 			</div>
 			<div class="twitter-content">
 				<p class="twitter-content__text">
 					Unerdwear cookie liquorice. Cake donut cupcake lollipop soufflé candy. Chocolate oat cake 
 					<span class="twitter-content__text_bold">@cheesecake</span> tootsie roll.
 				</p>
+			</div>
+		</div>
+	</div>
+	<div class="about-john">
+		<div class="container">
+			<div class="block-name about-john__block-name">
+				<span class="block-name__text">Who is John Doe?</span>
+				<hr class="block-name__line about-john__line_styles">
+			</div>
+			<div class="about-john-content">
+				<div class="about__left-column">
+					<p class="about__text">
+						Bear claw marzipan bear claw applicake I love muffin. Lemon drops gummi bears pastry gummi bears sesame snaps I love unerdwear.com. Soufflé cotton candy dessert candy ice cream wafer gummies cheesecake brownie.
+					</p>
+					<p class="about__text">
+						Muffin chupa chups jelly beans sweet pie applicake. Croissant chocolate cake I love pudding. Ice cream I love powder pudding apple pie marshmallow. Cupcake marzipan oat cake bonbon I love candy canes toffee.
+					</p>
+				</div>
+				<div class="about__right-column">
+					<p class="about__text">
+						Pudding dessert jujubes tiramisu gingerbread croissant tiramisu applicake. Sesame snaps sugar plum cotton candy chocolate bonbon lemon drops candy canes cotton candy. Cake toffee pie bear claw pastry.
+					</p>
+					<div class="about__social-icon">
+						<a href="#"><i class="icon-styles fa fa-twitter" aria-hidden="true"></i></a>
+						<a href="#"><i class="icon-styles fa fa-google-plus" aria-hidden="true"></i></a>
+						<a href="#"><i class="icon-styles fa fa-dribbble" aria-hidden="true"></i></a>
+						<a href="#"><i class="icon-styles fa fa-coffee" aria-hidden="true"></i></a>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
