testimonials block finished

--- a/index.html
+++ b/index.html
@@ -211,5 +211,20 @@
 			</div>
 		</div>
 	</div>
+	<div class="testimonials container">
+		<div class="block-name testimonials__block-name">
+			<span class="block-name__text">testimonials</span>
+			<hr class="block-name__line testimonials__line_styles">
+		</div>
+		<div class="testimonials-quotes">
+			<i class="fa fa-quote-right" aria-hidden="true"></i>
+		</div>
+		<div class="testimonials-content">
+			<p class="testimonials-content__text">
+				Applicake chocolate cake wafer toffee pie soufflé wafer. Tart marshmallow wafer macaroon cheesecake jelly. Gingerbread cookie soufflé sweet roll sweet roll jelly-o.
+			</p>
+			<span class="testimonials-content__author">-Walter White</span>
+		</div>
+	</div>
 </body>
 </html>
