--- a/index.html
+++ b/index.html
@@ -226,5 +226,62 @@
 			<span class="testimonials-content__author">-Walter White</span>
 		</div>
 	</div>
+	<div class="contact">
+		<div class="container">
+			<div class="block-name contact__block-name">
+				<span class="block-name__text">Contact</span>
+				<hr class="block-name__line contact__line_styles">
+			</div>
+			<form class="contact-feedback">
+				<div class="feedback__left-column">
+					<p class="form-name">Full name</p>
+					<input class="form-input__left" type="text">
+					<p class="form-name">Email</p>
+					<input class="form-input__left" type="email">
+				</div>
+				<div class="feedback__right-column">
+					<p class="feedback__right-column_text feedback_text-top">
+						Jujubes bear claw croissant wafer sweet lemon drops brownie chocolate bar. Sweet lollipop halvah tootsie roll cake fruitcake. Chocolate cake chocolate bar gingerbread lollipop tart. Jujubes bear claw donut chupa chups.
+					</p>
+					<p class="feedback__right-column_text">Linda Newman</p>
+					<p class="feedback__right-column_text">W325 State Road 123</p>
+					<p class="feedback__right-column_text">Mondovi, WI(Wisconsin) 98746-54321</p>
+					<p class="feedback__right-column_text">(715) 946 - 1234</p>
+				</div>
+				<div class="feedback__bottom-block">
+					<p class="form-name">Message</p>
+					<input type="text">
+					<input type="submit" value="Message">
+				</div>	
+			</form>
+		</div>
+	</div>
+	<footer class="footer">
+		<div class="container">
+			<ul class="footer-nav">
+				<li class="footer-nav__item">
+					<a href="#" class="footer-nav__link">
+						<span class="footer-nav__text">Home</span>
+					</a>
+				</li>
+				<li class="footer-nav__item">
+					<a href="#" class="footer-nav__link">
+						<span class="footer-nav__text">Services</span>
+					</a>
+				</li>
+				<li class="footer-nav__item">
+					<a href="#" class="footer-nav__link">
+						<span class="footer-nav__text">Portfolio</span>
+					</a>
+				</li>
+				<li class="footer-nav__item footer-nav__item_last">
+					<a href="#" class="footer-nav__link">
+						<span class="footer-nav__text">Contact</span>
+					</a>
+				</li>
+			</ul>
+			<span class="сopyright">2017 ©</span>
+		</div>
+	</footer>
 </body>
 </html>
