Contact block finished

--- a/index.html
+++ b/index.html
@@ -250,8 +250,8 @@
 				</div>
 				<div class="feedback__bottom-block">
 					<p class="form-name">Message</p>
-					<input type="text">
-					<input type="submit" value="Message">
+					<textarea class="form__bottom" rows="14"></textarea>
+					<input class="form__submit" type="submit" value="Message">
 				</div>	
 			</form>
 		</div>
