changes to the menu

--- a/index.html
+++ b/index.html
@@ -18,29 +18,19 @@
 				</div>
 				<ul class="menu"> 
 					<li class="menu__item">
-						<a href="#" class="menu__link">
-							<span class="menu__text">Home</span>
-						</a>
+						<a href="#" class="menu__link">Home</a>
 					</li>
 					<li class="menu__item">
-						<a href="#" class="menu__link">
-							<span class="menu__text">Service</span>
-						</a>
+						<a href="#" class="menu__link">Service</a>
 					</li>
 					<li class="menu__item">
-						<a href="#" class="menu__link">
-							<span class="menu__text">Features</span>
-						</a>
+						<a href="#" class="menu__link">Features</a>
 					</li>
 					<li class="menu__item">
-						<a href="#" class="menu__link">
-							<span class="menu__text">Portfolio</span>
-						</a>
+						<a href="#" class="menu__link">Portfolio</a>
 					</li>
 					<li class="menu__item">
-						<a href="#" class="menu__link">
-							<span class="menu__text">Contact</span>
-						</a>
+						<a href="#" class="menu__link">Contact</a>
 					</li>
 				</ul>
 			</div>
@@ -105,29 +95,19 @@
 		</div>
 		<ul class="portfolio-nav">
 			<li class="portfolio-nav__item">
-				<a href="#" class="portfolio-nav__link">
-					<span class="portfolio-nav__text">All</span>
-				</a>
+				<a href="#" class="portfolio-nav__link">All</a>
 			</li>
 			<li class="portfolio-nav__item">
-				<a href="#" class="portfolio-nav__link">
-					<span class="portfolio-nav__text">Panorams</span>
-				</a>
+				<a href="#" class="portfolio-nav__link">Panorams</a>
 			</li>
 			<li class="portfolio-nav__item">
-				<a href="#" class="portfolio-nav__link">
-					<span class="portfolio-nav__text">Portraits</span>
-				</a>
+				<a href="#" class="portfolio-nav__link">Portraits</a>
 			</li>
 			<li class="portfolio-nav__item">
-				<a href="#" class="portfolio-nav__link">
-					<span class="portfolio-nav__text">Macro</span>
-				</a>
+				<a href="#" class="portfolio-nav__link">Macro</a>
 			</li>
 			<li class="portfolio-nav__item">
-				<a href="#" class="portfolio-nav__link">
-					<span class="portfolio-nav__text">Journal</span>
-				</a>
+				<a href="#" class="portfolio-nav__link">Journal</a>
 			</li>
 		</ul>
 		<div class="portfolio-photo">
