responsive 768px - 480px finished

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 						<img class="logo__img" src="images/logo.png">
 					</a>
 				</div>
-				<ul class="menu"> 
+				<ul class="menu clearfix"> 
 					<li class="menu__item">
 						<a href="#" class="menu__link">Home</a>
 					</li>
@@ -97,7 +97,7 @@
 				<span class="block-name__text">Portfolio</span>
 				<hr class="block-name__line portfolio__line_styles">
 			</div>
-			<ul class="portfolio-nav">
+			<ul class="portfolio-nav clearfix">
 				<li class="portfolio-nav__item">
 					<a href="#" class="portfolio-nav__link">All</a>
 				</li>
