chenges in contact block responsive 768px - 480px

--- a/index.html
+++ b/index.html
@@ -220,13 +220,7 @@
 				<hr class="block-name__line contact__line_styles">
 			</div>
 			<form class="contact-feedback">
-				<div class="feedback__left-column">
-					<p class="form-name">Full name</p>
-					<input class="form-input__left" type="text">
-					<p class="form-name">Email</p>
-					<input class="form-input__left" type="email">
-				</div>
-				<div class="feedback__right-column">
+				<div class="feedback__right-column clearfix">
 					<p class="feedback__right-column_text feedback_text-top">
 						Jujubes bear claw croissant wafer sweet lemon drops brownie chocolate bar. Sweet lollipop halvah tootsie roll cake fruitcake. Chocolate cake chocolate bar gingerbread lollipop tart. Jujubes bear claw donut chupa chups.
 					</p>
@@ -234,6 +228,12 @@
 					<p class="feedback__right-column_text">W325 State Road 123</p>
 					<p class="feedback__right-column_text">Mondovi, WI(Wisconsin) 98746-54321</p>
 					<p class="feedback__right-column_text">(715) 946 - 1234</p>
+				</div>
+				<div class="feedback__left-column">
+					<p class="form-name">Full name</p>
+					<input class="form-input__left" type="text">
+					<p class="form-name">Email</p>
+					<input class="form-input__left" type="email">
 				</div>
 				<div class="feedback__bottom-block">
 					<p class="form-name">Message</p>
