--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Blueasy</title>
 	<link rel="stylesheet" href="css/font-awesome.css">
 	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/slicknav.css">
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="css/responsive.css">
 </head>
@@ -34,6 +36,7 @@
 						<a href="#" class="menu__link">Contact</a>
 					</li>
 				</ul>
+				<div class="mobile-menu"></div>
 			</div>
 		</div>
 		<div class="header-center">
@@ -270,5 +273,8 @@
 			<span class="сopyright">2017 ©</span>
 		</div>
 	</footer>
+	<script src="js/jquery.js"></script>	
+	<script src="js/slicknav.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
