--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<img class="logo__img" src="images/logo.png">
 					</a>
 				</div>
-				<ul class="menu clearfix"> 
+				<ul class="menu clearfix" id="myMenu"> 
 					<li class="menu__item">
 						<a href="#" class="menu__link">Home</a>
 					</li>
@@ -37,8 +37,10 @@
 					<li class="menu__item">
 						<a href="#" class="menu__link">Contact</a>
 					</li>
+					<li class="menu__item menu__item_bars">
+						<a href="javascript:void(0);" class="menu__link" onclick="myFunction()"><i class="fa fa-bars menu__item_icon" aria-hidden="true"></i></a>
+					</li>
 				</ul>
-				<div class="mobile-menu"></div>
 			</div>
 		</div>
 		<div class="header-center">
@@ -369,8 +371,7 @@
 			<span class="сopyright">2017 ©</span>
 		</div>
 	</footer>
-	<script src="js/jquery.js"></script>	
-	<script src="js/slicknav.js"></script>
+	<script src="js/jquery.js"></script>
 	<script src="js/photoswipe.min.js"></script>
 	<script src="js/photoswipe-ui-default.min.js"></script>
     <script src="js/main.js"></script>
