--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 	<title>Blueasy</title>
 	<link rel="stylesheet" href="css/font-awesome.css">
 	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="css/slicknav.css">
 	<link rel="stylesheet" href="css/photoswipe.css">
 	<link rel="stylesheet" href="css/default-skin.css">
+	<link rel="stylesheet" href="css/hamburgers.css">
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="css/responsive.css">
 </head>
@@ -37,8 +37,15 @@
 					<li class="menu__item">
 						<a href="#" class="menu__link">Contact</a>
 					</li>
-					<li class="menu__item menu__item_bars">
+				<!--<li class="menu__item menu__item_bars">
 						<a href="javascript:void(0);" class="menu__link" onclick="myFunction()"><i class="fa fa-bars menu__item_icon" aria-hidden="true"></i></a>
+					</li>-->
+					<li class="menu__item menu__item_bars">
+						<button class="hamburger hamburger--3dx" id="hamburger" type="button" onclick="myFunction()">
+  							<span class="hamburger-box">
+    							<span class="hamburger-inner"></span>
+  							</span>
+						</button>
 					</li>
 				</ul>
 			</div>
